[package]
name = "roguelike-racing-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.21.0", features = ["csr"]}
gloo = "0.10.0"
wasm-bindgen = "0.2.88"
web-sys = {version = "0.3.64", features = ["HtmlInputElement", "DomRect"]}
yew-router = "0.18.0"
# yewdux = "0.9.4"
yewdux = "0.10.0"
common = { path = "../common"}
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
js-sys = "0.3"
gloo-utils = "0.2.0"
strum = "0.25.0"
strum_macros = "0.25.2"

# [dependencies.web-sys]
# version = "0.3.22"
# features = [
#   "BinaryType",
#   "Blob",
#   "ErrorEvent",
#   "FileReader",
#   "MessageEvent",
#   "ProgressEvent",
#   "WebSocket",
# ]

