[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/"}
actix = "0.13"
actix-files = "0.6"
actix-web = "4.4"
actix-web-actors = "4.1"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
